# VS-Code-Mobile

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  build.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: pty_bridge.c
app/src/main/java/com/vscodemobile/: EditorActivity.kt  FileExplorer.kt  IAHelper.kt  RunManager.kt  TerminalOverlay.kt
app/src/main/res/drawable/: placeholder.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
